--- a/pathology-domain/pom.xml
+++ b/pathology-domain/pom.xml
@@ -8,7 +8,7 @@
         <version>${project.version}</version>
     </parent>
 
-    <artifactId>domain</artifactId>
+    <artifactId>pathology-domain</artifactId>
     <packaging>jar</packaging>
     <name>Hinacom Pathology Domain</name>
 </project>
